Fixed photo wall alignment. Fixed images to cover div

--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,12 @@
     align-items: center;
 }
 
+.projectImg{
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .tag:hover{
     cursor:pointer;
 }
@@ -92,8 +98,10 @@
     position: relative;
     text-align: center;
     width: 12.63vw;
+    height: 12.63vw;
     font-size: 2.02vw;
     cursor: pointer;
+    
 }
 
 .overlay{
@@ -108,6 +116,7 @@
     font-family: seguibl;
     color: #FFFFFF;
     text-shadow: 0px 3px 12px #000000;
+    cursor:pointer;
 }
 
 .content:hover .overlay{
